# splib07-loader

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yaml  release.yaml
data/: .gitignore  README.md
notebooks/: examples.ipynb
scripts/: generate_index.py
src/splib07/: __init__.py  _common.py  _index.py  _loader.py  _util.py  index.pickle.xz
tests/: conftest.py  test_index.py  test_splib07.py
