[tool.poetry]
name = "splib07-loader"
version = "0.1.0-dev"
description = ""
authors = ["Brian Schubert <schubert.b@northeastern.edu>"]
readme = "README.md"
packages = [
    { from = "src", include = "splib07" }
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.1"
typing-extensions = "^4.7.1"
nptyping = "^2.5.0"
spectral = { version = "^0.23.1", optional = true }

[tool.poetry.extras]
spectral = ["spectral"]

[tool.poetry.group.nb.dependencies]
jupyter = "^1.0.0"
nbqa = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
