[tool.poetry]
name = "splib07-loader"
version = "0.3.0"
description = ""
authors = ["Brian Schubert <schubert.b@northeastern.edu>"]
readme = "README.md"
packages = [
    { from = "src", include = "splib07" }
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.1"
typing-extensions = "^4.7.1"
nptyping = "^2.5.0"
spectral = "^0.23.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"
pytest = "^7.4.0"


[tool.poetry.group.nb.dependencies]
jupyter = "^1.0.0"
nbqa = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Black config.
[tool.black]
# How many characters per line to allow.
# https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length
line-length = 88
# Don't skip skip temporary sanity checks.
safe = true
# Python versions that should be supported by Black's output.
target-version = ["py39"]
# Set to true to preview style changes that may be added in black's next major release.
preview = false

# isort config.
[tool.isort]
profile = "black"

# mypy config.
[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "spectral.*"
ignore_missing_imports = true
